src/test/resources/30/expanded/valid/issue270/EPUB/lorem.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Lorem Ipsum</title>
		<link type="text/css" rel="stylesheet" href="lorem.css" />
	</head>
	<body>
		<h1>Lorem Ipsum</h1>
		<section>
			<h2>Table of Contents</h2>
			<nav epub:type="toc">
				<ol>
					<li><a href="#ch1">Chapter 1</a></li>
					<li><a href="./lorem-2.xhtml#ch2">Chapter 2</a></li>
				</ol>
			</nav>
		</section>
		<section id="ch1">
			<h2>Chapter 1</h2>
			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel purus mauris, ut
				auctor massa. Pellentesque non nunc risus. Fusce a massa augue. Nunc erat ante,
				auctor id varius ac, vestibulum non purus. Quisque non dui in sem consectetur
				condimentum non ac quam. Quisque ultricies nulla nec urna fringilla pretium.
				Pellentesque dictum pulvinar purus in mattis. Aliquam vestibulum orci sed magna
				vestibulum a sollicitudin lectus pharetra. Suspendisse luctus risus imperdiet nunc
				condimentum malesuada. Nulla fringilla vulputate vestibulum. Sed diam dui, fringilla
				quis sagittis nec, viverra et nibh.</p>

			<p>Sed sollicitudin accumsan augue, quis pulvinar sem volutpat at. Vestibulum rutrum
				bibendum augue sit amet accumsan. Etiam tempus malesuada libero vestibulum
				fringilla. Maecenas diam nulla, ultricies ac sodales vitae, viverra ut velit.
				Vivamus posuere, mi sit amet vehicula tempus, nibh purus scelerisque enim, non
				vestibulum erat arcu in libero. Aliquam vel convallis nibh. Sed in nisi ipsum. Sed
				sed est justo, in lacinia nulla.</p>

			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus est vel lacus
				ullamcorper vestibulum. Mauris est sapien, pharetra id feugiat in, ornare a erat.
				Nam consectetur vehicula nisi vel faucibus. Morbi blandit augue nec lacus malesuada
				venenatis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
				ridiculus mus. Maecenas consectetur, odio vitae suscipit ullamcorper, arcu ligula
				pellentesque sem, quis rhoncus enim eros id lectus. Nam ornare dui est, vel posuere
				metus. Quisque non nisl metus. Pellentesque id mi nunc, in gravida metus. Nullam
				neque tellus, ultricies quis laoreet vitae, imperdiet at nunc. Ut laoreet massa quis
				quam vulputate et ultricies nibh consectetur. Donec convallis, nulla id ultricies
				ullamcorper, diam tortor interdum dolor, vel tempor lectus urna ut est. Praesent
				convallis lacus vitae justo lobortis euismod. In at ante elit.</p>

			<p>Aenean quis consectetur justo. Nulla nec enim nisl. Etiam rutrum volutpat tellus, a
				scelerisque mauris malesuada sit amet. Suspendisse quis urna augue. Proin tempus
				hendrerit libero non cursus. Praesent non massa at nisl luctus facilisis. Nullam
				pulvinar, ligula eu porta ornare, mi mi accumsan orci, a iaculis tortor lorem quis
				dolor. Phasellus ante nibh, pulvinar ac pulvinar eu, pulvinar ac enim.</p>

			<p>Donec vel velit id elit volutpat vestibulum vitae a erat. Duis id est id magna
				aliquam pretium nec sit amet nibh. Nullam condimentum suscipit felis, sed interdum
				felis dictum ac. Phasellus non nisi quis magna pellentesque auctor. Cras risus
				lectus, viverra eu fringilla malesuada, rhoncus et est. Etiam rhoncus pharetra
				accumsan. Nullam suscipit tellus felis.</p>
		</section>
	</body>
</html>
