src/test/resources/30/expanded/invalid/issue189/EPUB/lorem.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="la" lang="la"
	xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>Lorem Ipsum</title>
		<link type="text/css" rel="stylesheet" href="lorem.css" />
	</head>
	<body>
		<h1>Lorem Ipsum</h1>
		<section>
			<h2>Table of Contents</h2>
			<nav epub:type="toc">
				<ol>
					<li><a href="#ch1">Chapter 1</a></li>
				</ol>
			</nav>
		</section>
		<section id="ch1">
			<h2>Chapter 1</h2>			
			<p>Integer dolor dolor, volutpat id commodo id, gravida id risus. Donec consectetur
				sollicitudin sem, non auctor urna pulvinar non. Vivamus ipsum nisi, commodo sed
				scelerisque id, porta nec massa. Vestibulum ac risus et augue faucibus fermentum ut
				et nisi. Integer tincidunt suscipit ipsum, sed interdum felis mollis sed.
				Suspendisse potenti. Praesent et mauris et quam consequat tristique. Morbi mi dolor,
				pharetra quis rutrum quis, fringilla in tortor. Sed a nulla vitae leo dapibus
				cursus. Aliquam erat volutpat. Integer purus purus, dictum id bibendum at, lobortis
				quis metus.</p>			
			<div data-name="aa" class="alignTop">
				<somebadxhtmlformatting />
			</div>
			<span/>
		</section>
	</body>
</html>
